service/tests/models/products/snapshots/product_create/can_create_base_product@product_create.snap
---
source: tests/models/products/product_create.rs
expression: "(result, product_count, variant_count)"
---
(
    Ok(
        ProductCreateResponse {
            product: Product {
                id: ID,
                pid: PID,
                category_id: ID,
                name: "Minimal Product",
                description: Some(
                    "A product without setup records",
                ),
                information: Json(
                    {
                        "Material": "Cotton",
                        "Origin": "Kenya",
                    },
                ),
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            tags: [],
            options: [],
            pictures: [],
            variants: [],
            variant_attribute_values: [],
        },
    ),
    1,
    0,
)
