service/tests/models/products/snapshots/product_create/cannot_create_product_when_category_does_not_exist@product_create.snap
---
source: tests/models/products/product_create.rs
expression: "(result, product_count, variant_count)"
---
(
    Err(
        InvalidReference(
            "Category does not exist.",
        ),
    ),
    0,
    0,
)
