service/tests/models/products/snapshots/product_create/cannot_create_product_when_name_exists@product_create.snap
---
source: tests/models/products/product_create.rs
expression: "(result, product_count, variant_count)"
---
(
    Err(
        EntityAlreadyExists(
            "Product with this name already exists.",
        ),
    ),
    1,
    0,
)
