service/tests/models/products/snapshots/product_create/creates_unique_storefront_slugs@product_create.snap
---
source: tests/models/products/product_create.rs
expression: "(first.product.slug(), second.product.slug())"
---
(
    "storefront-slug-product",
    "storefront-slug-product-1",
)
