service/tests/models/products/snapshots/product_create/rolls_back_product_when_nested_attribute_value_does_not_exist@product_create.snap
---
source: tests/models/products/product_create.rs
expression: "(result, product_count, variant_count)"
---
(
    Err(
        InvalidReference(
            "Attribute value does not exist for the selected attribute. Check that both the attribute and attribute value exist and belong together.",
        ),
    ),
    0,
    0,
)
